--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
-    "description": "API for Polario  __Naming:__  * json properties are formatted in camel case (fooBar) besides of enums (FooBar) * route params are formatted in hyphen case (foo-bar) * query params are formatted in snake case (foo_bar) * query params could hold lists of elements if they are comma separated * enum properties are formatted in capitalized camel case (FooBar)  __Default values:__  * default values are specified for optional parameters do only apply to POST requests  __Types:__  * numbers are considered to be float values * strings that are not specified to be html formatted should be careful to interpreted them as html to avoid against xss attacks * timestamps are considered to be in unix time  __Headers:__  * ___Platform___: can be always set as header param to specify the platform of the request for the logging output",
+    "name": "plazzag/polario-sdk-php",
+    "description": "API for Polario",
     "keywords": [
         "openapitools",
         "openapi-generator",
